grid gap fixed

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -60,8 +60,8 @@
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 16px;
-  padding: 16px;
+  grid-gap: 46px;
+  padding: 30px 23px 30px 30px;
   flex-grow: 1;
 }
 
